# fastapi-template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.rst  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci_docker.yml  conduit.yml  deploy.yml  tests.yml
alembic/: env.py
app/: config.py  main.py  utils.py
app/.deta/: prog_info  state
app/adapter/: database.py  events.py
app/adapter/orms/: orm.py  user.py
app/adapter/repositories/: base.py  users.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  authentication.py  users.py
app/core/: events.py
app/domain/: user.py
app/entrypoints/: app.py
app/errors/: database.py
app/events/: app_handlers.py  db_handlers.py
app/models/: common.py
app/models/domain/: rwmodel.py  user.py  users.py
app/models/schemas/: jwt.py  rwschema.py  users.py
app/resources/: strings.py
app/services/: authentication.py  jwt.py  security.py  users.py
src/: setup.py
src/main/adapter/: events.py
src/main/adapter/orms/: orm.py
src/main/core/: config.py  events.py
src/main/entrypoints/: app.py
tests/: conftest.py  testing_helpers.py
tests/test_api/test_routes/: test_app.py  test_authentication.py  test_login.py  test_registration.py
tests/test_services/: test_jwt.py
tests/unit/: test_utils.py
tests/unit/test_domain/: test_user.py
tests/unit/test_service/: test_user.py
